# Epitech-IndieStudio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Findraylib.cmake  Makefile  README.md  build.sh  cmake_install.cmake  indie  save.save
assets/: Steve.iqm
assets/models/: bomb_up.glb  cobblestone.glb  fire_up.glb  grass.glb  grass_block.glb  lever.glb  redstone.glb  speed_up.glb  tnt.glb  wall_pass.glb
assets/models/blocks/: coal_ore.glb  coarse_dirt.glb  cobbled_deepslate.glb  copper_ore.glb  dirt.glb  gravel.glb  stone.glb  wood_dark_oak.glb
assets/models/flowers/: orchic_blue.glb  poppy.glb
assets/models/powers/: bomb_up.glb  (+3 more)
data/: environment.indie
include/: IPowerUp.hpp  KeyboardManager.hpp  Map.hpp  MapController.hpp  Player.hpp  PowerUp.hpp  audioDevice.hpp  bomb.hpp  bombup.hpp  camera2D.hpp  camera3d.hpp  color.hpp  draw.hpp  enums.hpp  fireUp.hpp  image.hpp  includes.hpp  indie.hpp  indieStudio.hpp  matrix.hpp  model.hpp  music.hpp  powerUp.hpp  powerup.hpp  ray.hpp  screen.hpp  sound.hpp  speedup.hpp  splashscreen.hpp  texture.hpp  vector2.hpp  vector3.hpp  vector4.hpp  wallpass.hpp  window.hpp
include/components/: bomb.hpp  button.hpp  environmentHandler.hpp  error.hpp  keyboardManager.hpp  mapController.hpp  player.hpp  powerUp.hpp  resourceLoader.hpp
include/encapsulation/: audioDevice.hpp  camera.hpp  color.hpp  draw.hpp  font.hpp  image.hpp  material.hpp  matrix.hpp  mesh.hpp  model.hpp  mouse.hpp  music.hpp  npatchInfo.hpp  ray.hpp  rectangle.hpp  screen.hpp  sound.hpp  text.hpp  texture.hpp  vector.hpp  window.hpp
include/menu/: SaveMenu.hpp
include/save/: Deserialization.hpp  Deserializationcopy.hpp  Serialization.hpp  Serializationcopy.hpp  bmbSysCall.hpp  bmbSystemCall.hpp  dataStruct.hpp  dataStructcopy.hpp
scripts/: build.sh  clean.sh  map_generator.py
src/: Game.cpp  Map.cpp  SaveMenu.cpp  game.cpp  indie.cpp  main.cpp  splashscreen.cpp
src/IncludeDefinitions/: Bomb.cpp  MapController.cpp  Player.cpp  PowerUp.cpp
src/Menus/: ControlsMenu.cpp  CreditsMenu.cpp  EndMenu.cpp  GameMenu.cpp  HelpMenu.cpp  MainMenu.cpp  MultiplayerMenu.cpp  OptionMenu.cpp  OptionsMenu.cpp  PlayMenu.cpp  PlayerControlsMenu.cpp  PlayerFourMenu.cpp  PlayerOneMenu.cpp  PlayerThreeMenu.cpp  PlayerTwoMenu.cpp  SinglePlayerMenu.cpp  SplashScreen.cpp  endMenu.cpp
src/components/: bomb.cpp  environmentHandler.cpp  mapController.cpp  player.cpp  powerUp.cpp
(+5 files in other folders)
